Bug 191748 - Signals are connected to slots twice
Summary: Signals are connected to slots twice
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_fileshare (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-05 22:30 UTC by Ivo Anjo
Modified: 2009-05-20 23:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivo Anjo 2009-05-05 22:30:43 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

In kdenetwork/filesharing/advanced/propsdlgplugin/, the signals for the dialog are connected twice to the slots: they are connected in the PropertiesPageGUI constructor and in the propertiespagegui.ui file, resulting in slots being called twice for each event.

This seems to have been introduced in revision 905648.
Comment 1 Ivo Anjo 2009-05-20 23:19:11 UTC
SVN commit 970814 by ianjo:

Remove duplicate signal/slot connections: they were already defined in
propertiespagegui.ui, and so the connections were made twice.

BUG: 191748
CCMAIL: montel@kde.org



 M  +0 -14     propertiespage.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=970814