Remove duplicate signal/slot connections: they were already defined in propertiespagegui.ui, and so the connections were made twice.

BUG: 191748
CCMAIL: montel@kde.org


svn path=/trunk/KDE/kdenetwork/filesharing/; revision=970814